--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
 	margin-right:0% !important;
 	margin-left:0% !important;
 	}
-
+a{text-decoration:none !important;}
+.bl-color{color:black !important;}
 .navbar{
 	margin-left:10px !important;
 	margin-right:100px !important;
@@ -44,10 +45,11 @@ nav .icon-bar + .icon-bar { margin-top: 4px }
 .hover-effect:hover{
 	background:#007bff;
 	color:white;
+	transition: 2.6s;
 }
-.hover-effect:hover .sc-control{margin-top: 3rem !important;}
-.hover-effect:hover img.png{display:none;}
-.hover-effect:hover .pngc{display:block !important;}
+.hover-effect:hover .sc-control{margin-top: 3rem !important;transition: .8s;}
+.hover-effect:hover img.png{display:none;transition: .5s;}
+.hover-effect:hover .pngc{display:block !important;transition: .8s;}
 #third-section{background-color: #e6e8e8 !important;}
 #fifth-section{
 	height:auto;
@@ -94,9 +96,46 @@ input[type=text] {
     color: #333333;
 	margin-left: 170px;
 }
+.fa.fa-bars,.fa.fa-times {
+    font-size: 30px;
+}
+#btn-cross{display:none;}
 @media only screen and (min-width: 320px)and (max-width: 575px) {
  .fa.fa-search.form-control-feedback {
     margin-top: -37px !important;}
+.navbar.navbar-expand-lg.nav-color.px-5.mx-5.container {
+    margin: 0rem !important;
+    width: 100% !important;
+    padding: .5rem !important;
+}
+}
+
+@media only screen and (max-width: 991px){
+	#menu{
+		margin-top:60px;
+		background-color:black !important;
+		height:0;
+		width:300px;
+		position:absolute !important;
+		z-index: 1;
+		top: 0;
+		right:0;
+		overflow-Y: hidden;
+		transition: 0.8s !important;
+	}
+	#tog-btn{display:block !important;}
+	#tog-btn2{display:block !important;}
+	#menu ul li a{color:white !important;}
+	#menu ul li:hover a{color:blue !important;}
+	#menu ul li a:hover{color:blue !important;}
+	#menu ul li{
+		display: inline-block !important;
+		text-align: center;
+		margin-bottom: 15px;
+		margin-top: 15px;
+		width: 100%;
+		height:30px;
+	}
 }
 
  /*		Default Layout: 960px. 
@@ -163,16 +202,58 @@ px      68    160    252    */
     margin:0% !important;
     padding: 0% !important;
 }
+#aaaa5 {
+    margin:0% !important;
+    padding: 0% !important;
+}
+#aaaa2 {
+    margin:0% !important;
+    padding: 0% !important;
+}
+#aaaa3 {
+    margin:0% !important;
+    padding: 0% !important;
+}
+#aaaa4 {
+    margin:0% !important;
+    padding: 0% !important;
+}
 .b-btn{width:220px !important;}
 .h1, h1 {
-    font-size: 1.6rem;
+    font-size: 1.6rem !important;
 }
 p {
-    font-size: 1.0rem;
+    font-size: 1.0rem !important;
 }
 .s-btn.mx-3.hover-effect {
     margin-left: 0% !important;
     margin-right: 0% !important;
+}
+.carousel-item>.text-center.mt-5 {
+    margin: 0 !important;
+}
+
+#fifth-section {
+    margin: 0 !important;
+    padding-top: .2rem !important;
+}
+#carouselExampleIndicators {
+    padding: 0 !important;
+}
+.btn.btn-outline-primary.my-5.ml-5.btn-radius {
+    margin: 0 !important;
+}
+.footer-design.mt-5 {
+    margin-top: .3rem !important;
+}
+.text-center.fs-color.mt-5 {
+    margin-top: .3rem !important;
+}
+.text-center.f-color.ft-size.pt-5 {
+    padding-top: .8rem !important;
+}
+.col-lg-4.col-md-4.col-sm-12.f-color.mt-5.hover-effect.w-100 {
+    margin-top: .1rem !important;
 }
 }
 
@@ -215,10 +296,10 @@ px      68    160    252    344    436    */
     width: 100% !important;
 }
 .h1, h1 {
-    font-size: 2.0rem;
+    font-size: 2.0rem !important;
 }
 p {
-    font-size: 1.2rem;
+    font-size: 1.2rem !important;
 }
 
 .s-btn.mx-3.hover-effect {
